# bseyes-restapi

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
authorization/: views.py
bseyes/: settings.py  urls.py  wsgi.py
restapi/: admin.py  api.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
restapi/migrations/: 0001_initial.py  0002_auto_20200326_1728.py  0003_auto_20200327_1534.py  0004_auto_20200330_0524.py  0005_auto_20200331_1438.py  0006_student.py  0007_auto_20200504_0616.py  0008_remove_student_student.py  0009_auto_20200504_0941.py  0010_auto_20200512_0433.py  0011_auto_20200516_0923.py  0012_auto_20200516_1617.py  0013_comment.py  0014_delete_answer.py  0015_answer_rate.py  0016_delete_answer.py  0017_delete_rate.py  0018_answer_rate.py  0019_delete_answer.py  0020_delete_rate.py  0021_answer_rate.py  0022_auto_20200518_1456.py  0023_auto_20200518_1458.py  0024_remove_answer_rate.py  0025_delete_rate.py  0026_answer_rate.py  0027_auto_20200520_0702.py  0028_auto_20200522_1518.py  0029_auto_20200522_1521.py  0030_auto_20200522_1539.py  0030_auto_20200525_0719.py  0031_merge_20200527_0648.py  0032_auto_20200527_1646.py  0033_auto_20200528_0427.py  0034_comment_studenttokenmodel.py  0035_auto_20200920_0738.py  0036_auto_20200920_0815.py  0037_auto_20200920_0835.py  0038_auto_20200920_0850.py  0039_auto_20200920_0904.py  (+1 more)
static/css/: style.css
templates/: base.html
templates/admin/: base_site.html
templates/restapi/: subjects.html  teachers.html
